# awsum

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt
cmake/: FindSDL2_ttf.cmake
src/: game.cpp  game.h  main.cpp  sdl_utils.h  settings.cpp  settings.h
